<resources>
    
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    
    <string name="app_name">S Books</string>
    <string name="satima">Satima</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up_to_access_library">Sign up to access the library</string>
    <string name="agreed_terms_and_conditions">By signing up you agree to our Terms and Conditions</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="existing_user">Already have an account? </string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="view_all">View All</string>

    <string name="your_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="occupation">Occupation</string>
    <string name="institution">Institution</string>

    <string name="complete_profile">Complete Profile</string>
    <string name="select_photo">Select Photo</string>
    <string name="btn_continue">Continue</string>

    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="book_categories">Book Categories</string>
    <string name="my_books">My Books</string>
    <string name="discover_books">Discover Books</string>
    <string name="discover_books_description">Find the latest added books in our library and many other more</string>
    <string name="bag">My BackPack</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact Us</string>
    <string name="extra">Extra</string>
    <string name="search">Search</string>
    <string name="search_book">Looking for a book</string>

</resources>
