<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/icon_home"/>

        <item android:id="@+id/nav_library"
            android:title="@string/library"
            android:icon="@drawable/icons_library_black"/>

        <item android:id="@+id/nav_book"
            android:title="@string/my_books"
            android:icon="@drawable/icons_books_black"/>

        <item android:id="@+id/nav_bag"
            android:title="@string/home"
            android:icon="@drawable/icons_backpack_black"/>
    </group>

    <item android:title="@string/extra">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_profile"
                    android:title="@string/my_profile"
                    android:icon="@drawable/icons_profile"/>

                <item android:id="@+id/nav_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/icons_settings"/>

                <item android:id="@+id/nav_contact"
                    android:title="@string/contact"
                    android:icon="@drawable/icon_about"/>

                <item android:id="@+id/nav_logout"
                    android:title="@string/sign_out"
                    android:icon="@drawable/icon_sign_out"/>
            </group>
        </menu>
    </item>
</menu>