<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">


    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/satima"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ScreenSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="16sp"
        android:fontFamily="@font/josefin_sans"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/josefin_sans"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/new_user"
            android:textColor="@color/colorPrimary"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:fontFamily="@font/josefin_sans"/>

    </LinearLayout>

</LinearLayout>