<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/satima"
        android:src="@drawable/ic_launcher"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <TextView
        android:id="@+id/ScreenSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="16sp"
        android:fontFamily="@font/josefin_sans"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutEmailSignIn">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/txtEmailSignIn"
                    android:hint="@string/email_address"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLayoutPasswordSignIn"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPasswordSignIn"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgot_password_sign_in"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="end"
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/josefin_sans"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:layout_marginEnd="6dp"/>
                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginEnd="6dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>