<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/satima"
        android:src="@drawable/ic_launcher"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/ScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>

    <TextView
        android:id="@+id/ScreenSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_access_library"
        android:textSize="16sp"
        android:fontFamily="@font/josefin_sans"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/full_name"
                android:hint="@string/your_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/username"
                app:counterMaxLength="15"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_address"
                android:hint="@string/email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_number"
                android:hint="@string/phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/occupation"
                android:hint="@string/occupation"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/institution"
                android:hint="@string/institution"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/agreed_terms_and_conditions"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="start"
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/josefin_sans"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/sign_in_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/existing_user"
                android:textColor="@color/colorPrimary"
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/josefin_sans"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>