<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical"
    tools:context=".User.UserInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/complete_profile"
        android:textColor="@color/colorPrimary"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUserInfo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@color/colorAccent"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txtSelectPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_photo"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLayoutNameUserInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/txtNameUserInfo"
            android:hint="@string/your_name"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>


</LinearLayout>